--- a/android/app/src/main/res/drawable/icon.xml
+++ b/android/app/src/main/res/drawable/icon.xml
@@ -2,11 +2,9 @@
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/bgColor" />
-
-    <!-- You can insert your own image assets here -->
     <item>
         <bitmap
-            android:gravity="center"
+            android:gravity="fill"
             android:src="@mipmap/ic_launcher" />
     </item>
 </layer-list>
